# starlette-webagg

./: LICENCE  README.md  demo1.py  demo2.py  demo_mne.py  demo_popup.py  pyproject.toml
examples/starlette/: demo_popup.py  mne.py  one_fig.py  two_figs.py
src/mplbed/: __init__.py  middleware.py  starlette_app.py  withshow.py
src/starlette_webagg/: __init__.py  starlette_app.py  utils.py  webaggext.js  withshow.py
