[project]
name = "starlette_webagg"
version = "0.1.0"
description = "Integrate Matplotlib's WebAgg backend with Starlette for real-time plotting in web applications."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "starlette>=1.0.0",
    "tornado>=6.5.5",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
demo = [
  "mne>=1.12.1",
]

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"
